  * Really fix the speed changing race that was mentioned in 1.1.1
  * Send events for tvtime filmmode changes
  * Add an image decoder based on gdk-pixbuf
  * Add browseable capability to smb input plugin
  * Enable AMD64 mmx/sse support in some plugins (tvtime, libmpeg2, goom...)
  * Fix xxmc subpictures (broken since 1.1.1)
  * FFmpeg update (version 51.1.0)

xine-lib (1.1.1)
  * Improve sound quality when using alsa 1.0.9 or above.
    When playing a 44.1khz stream on a 48khz only capable sound card.
    It bypasses alsa-lib resampler and uses xine's
  * Windows ports bug fixes and improvements
  * Set up the framebuffer palette (fb video out).
  * build fixes and improvements, added --with-pthread-prefix and 
    --with-zlib-prefix options
  * new DirectFB video output plugin with many improvements (output to overlay
    or TV, deinterlacing, image controls, zoom, OSD, double/triple buffering,
    vsync, flicker filtering, field parity control)
  * overlay cropping fixes for small streams or when using cropping support
  * experimental frame allocation optimization reduces cpu usage of the
    deinterlacer plugin by up 25%
  * implement time seeking on DVD plugin
  * move CFLAGS optimizations to a separated file (added --disable-optimizations)
  * use the same codec path as MPlayer (/usr[/local]/lib/codecs)
  * FFmpeg sync (new QDM2 decoder)
  * imported Duck TrueMotion 2 decoder from FFmpeg
  * sync libfaad2 to latest GPL compatible version; fixes AAC decoding on x86_64 arch
  * support gapless playback while switching streams (requires UI cooperation)
  * fix speed changing race causing deadlock with v4l plugin
  * cddb improvements/fixes (DTITLE/DYEAR parsing, timeout increase and
    multiline entries support) [#1205274]

xine-lib (1.1.0)
  * new quality deinterlacer from dscaler: GreedyH (Greedy High Motion)
  * new quality deinterlacer from dscaler: TomsMoComp (Tom's Motion Compensated)
  * added help for most deinterlace methods
  * ffmpeg update